fix unequal list item spacing

--- a/@/css/style.css
+++ b/@/css/style.css
@@ -225,6 +225,10 @@ button.close:focus {
   padding: 0;
 }
 
+.link-list li {
+  display: block;
+}
+
 /* home */
 
 .home section {
